<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_padding_default"
    tools:context=".MainViews.CalculationsAutomaticFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvInputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_padding_min"
            style="@style/Theme.NeuronTraining.CardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_default">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvIndValueB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_w0"
                    style="@style/TextAppearance.NeuronTraining.Subtitle1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilValueW0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value_w0"
                    android:enabled="false"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etValueW0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_w1"
                    android:padding="@dimen/common_padding_min"
                    style="@style/TextAppearance.NeuronTraining.Subtitle1"/>

                <com.google.android.material.textfield.TextInputLayout android:id="@+id/tilValueW1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value_w1"
                    android:enabled="false"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etValueW1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_j"
                    android:padding="@dimen/common_padding_min"
                    style="@style/TextAppearance.NeuronTraining.Subtitle1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilValueJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value_j"
                    android:enabled="false"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etValueJ"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_total_iterations"
                    android:padding="@dimen/common_padding_min"
                    style="@style/TextAppearance.NeuronTraining.Subtitle1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilValueIterations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value_iterations"
                    android:enabled="false"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etValueIterations"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCalcular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginHorizontal="@dimen/common_padding_min"
                android:layout_gravity="center"
                android:gravity="center"
                app:icon="@drawable/ic_calculate"
                app:iconGravity="start"
                android:text="@string/btn_calculate"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginHorizontal="@dimen/common_padding_min"
                android:enabled="false"
                android:layout_gravity="center"
                android:gravity="center"
                app:icon="@drawable/ic_more"
                app:iconGravity="start"
                android:text="@string/btn_more_details"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>